[tool.poetry]
name = "turbotelebasic"
version = "0.1.0"
description = "A handy toolchain for the telebasic power user."
authors = ["songer <NoTy>"]
license = "MIT"

[tool.poetry.scripts]
ttb = 'turbotelebasic.__main__:main'

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^5.3.5"
click = "^7.0"
lark-parser = "^0.8.1"
wasmer = "^0.3.0"
llvmlite = "^0.31.0"
bytecode = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
