[tool.poetry]
name = "bcc"
version = "0.1.0"
description = "A handy toolchain for the telebasic power user."
authors = ["songb1rd <49145061+songb1rd@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
